security: remove hardcoded database credentials
BREAKING CHANGE: DATABASE_URL must now be set via environment variable

Changes:
- Remove hardcoded credentials from alembic.ini
- Add required DATABASE_URL validation in database.py
- Update .gitignore to exclude all .env files
- Remove .env files from Git tracking (kept locally)

Security improvements:
- Zero hardcoded credentials in codebase
- Proper environment variable validation
- Comprehensive .gitignore for sensitive files

--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -8,7 +8,7 @@ prepend_sys_path = .
 version_path_separator = os
 
 #sqlalchemy.url = postgresql://user:password@localhost:5432/cungbanlangnghe
-sqlalchemy.url = postgresql://postgres.yfrkvqwujfiqqlzoobjn:YizzfspbSzXWk4ar@aws-1-ap-southeast-1.pooler.supabase.com:6543/postgres
+sqlalchemy.url = 
 
 [post_write_hooks]
 
