--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,24 +1,106 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+# ============================================
+# SECURITY - NEVER COMMIT THESE
+# ============================================
+.env
+.env.*
+!.env.example
+*.key
+*.pem
+*.p12
+secrets/
+credentials/
+*.BACKUP
+*.OLD
+*.bak
 
-node_modules
-dist
-dist-ssr
-*.local
+# ============================================
+# BACKEND - PYTHON
+# ============================================
+backend/.env
+backend/.env.local
+backend/.env.production
+backend/.env.backup.local
+backend/venv/
+backend/env/
+backend/ENV/
+backend/.venv/
+backend/__pycache__/
+backend/**/__pycache__/
+backend/*.py[cod]
+backend/**/*.py[cod]
+backend/*$py.class
+backend/**/*$py.class
+backend/*.so
+backend/.Python
+backend/.pytest_cache/
+backend/htmlcov/
+backend/.coverage
+backend/*.db
+backend/*.sqlite
+backend/*.log
+backend/alembic/versions/*.pyc
 
-# Editor directories and files
-.vscode/*
+# ============================================
+# FRONTEND - NODE/REACT
+# ============================================
+frontend/node_modules/
+frontend/dist/
+frontend/dist-ssr/
+frontend/.env
+frontend/.env.local
+frontend/.env.production.local
+frontend/npm-debug.log*
+frontend/yarn-debug.log*
+frontend/yarn-error.log*
+frontend/pnpm-debug.log*
+frontend/lerna-debug.log*
+frontend/logs/
+frontend/*.local
+
+# ============================================
+# IDE & EDITORS
+# ============================================
+.vscode/
 !.vscode/extensions.json
-.idea
+!.vscode/settings.json
+.idea/
+*.swp
+*.swo
+*~
 .DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+Thumbs.db
+
+# ============================================
+# BUILD & DIST
+# ============================================
+build/
+dist/
+*.egg-info/
+.next/
+out/
+
+# ============================================
+# LOGS
+# ============================================
+logs/
+*.log
+
+# ============================================
+# TESTING
+# ============================================
+coverage/
+.pytest_cache/
+htmlcov/
+.coverage
+
+# ============================================
+# DEPLOYMENT
+# ============================================
+fly.toml.local
+wrangler.toml.local
+railway.json.local
