--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,7 +19,9 @@ redis==5.2.1
 
 # Authentication & Security
 #python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
+#passlib[bcrypt]==1.7.4
+passlib==1.7.4
+bcrypt==4.0.1  # Specific compatible version
 python-dotenv==1.0.1
 cryptography==44.0.0
 
