--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -21,7 +21,8 @@ redis==5.2.1
 #python-jose[cryptography]==3.3.0
 #passlib[bcrypt]==1.7.4
 passlib==1.7.4
-bcrypt==4.0.1  # Specific compatible version
+argon2-cffi==23.1.0
+#bcrypt==4.0.1  # Specific compatible version
 python-dotenv==1.0.1
 cryptography==44.0.0
 
