--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,18 @@
-VITE_API_URL=https://cung-ban-lang-nghe-api.onrender.com/api/v1
+# ============================================
+# FRONTEND ENVIRONMENT VARIABLES - PRODUCTION
+# File: frontend/.env.production
+# ============================================
+
+# App Info
 VITE_APP_NAME=Cùng Bạn Lắng Nghe
 VITE_APP_VERSION=1.0.0
+
+# API Configuration - PRODUCTION
+VITE_API_URL=https://api.cungbanlangnghe.vn
+
+# Feature Flags
+VITE_ENABLE_ENCRYPTION=true
+VITE_ENABLE_CRISIS_DETECTION=true
+
+# Environment
+VITE_ENV=production
